--- a/src/template-home.html
+++ b/src/template-home.html
@@ -7,16 +7,19 @@
     <link rel="stylesheet" href="template-home.css">
 </head>
 <body>
+    <script>
+         // Atualiza a imagem de perfil
+    </script>
     <div class="card">
         <div class="header">
             <h1>EasyBook</h1>
             <div class="profile-link">
-                <a href="#">perfil</a>
-                <img src="profile.jpg" alt="Profile Picture"> <!-- Replace with actual image path -->
+                <a href="atualizar-perfil.html">perfil</a>
+                <img id="profile-img" src="" alt="Profile Picture"> <!-- Replace with actual image path -->
             </div>
         </div>
         <div class="profile">
-            <img src="profile.jpg" alt="Profile Picture"> <!-- Replace with actual image path -->
+            <img src="http://localhost:8080/usuarios/2/fotoPerfil" alt="Profile Picture"> <!-- Replace with actual image path -->
             <div class="profile-info">
                 <h2>Diogo Almeida</h2>
                 <p>"Nossa barbearia é o espaço ideal para quem busca estilo, cuidado e uma experiência única."</p>
