--- a/src/template-servidor.html
+++ b/src/template-servidor.html
@@ -36,7 +36,7 @@
                     <p>Bairro Exemplo - Cidade/UF</p>
                 </div>
             </header>
-            <section class="bg-purple-600 text-white p-4 rounded-lg mb-6 text-center md:text-left">
+            <section id="bio" class="text-white p-4 rounded-lg mb-6 text-center md:text-left">
                 <p>Este é um espaço para a descrição do perfil do prestador de serviço. Pode incluir informações sobre a especialidade, experiência, ou qualquer outra informação relevante para os clientes.</p>
             </section>
             <section class="mb-6">
