--- a/src/atualizar-perfil.html
+++ b/src/atualizar-perfil.html
@@ -29,7 +29,7 @@
         <div id="message"></div>
     </div>
     <footer>
-        <p>Retomar a Página Inicial? <a href="index.html">Clique Aqui</a></p>
+        <a href="template-home.html">Cancelar</a></p>
     </footer>
     <script src="auth.js"></script>
     <script src="atualizar-perfil.js"></script>
