--- a/src/template-profissional.html
+++ b/src/template-profissional.html
@@ -6,7 +6,7 @@
     <title>Home - profissional</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="template-servidor.css">
+    <link rel="stylesheet" href="template-profissional.css">
 </head>
 <body class="p-4 md:p-8">
 
@@ -60,9 +60,9 @@
                 </div>
             </section>
             <section class="border-t border-gray-200 pt-6">
-                <h3 class="text-lg font-semibold text-center text-gray-700 mb-4">Horários agendados:</h3>
+                <h3 class="text-lg font-semibold text-center text-gray-700 mb-4">Horários disponibilizados:</h3>
                 <div id="appointments-container" class="flex flex-wrap justify-center gap-3">
-                    <p id="no-appointments-msg" class="text-gray-500 italic">Selecione um dia para ver os horários agendados.</p>
+                    <p id="no-appointments-msg" class="text-gray-500 italic">Selecione um dia para ver os horários disponibilizados.</p>
                 </div>
             </section>
         </div>
@@ -78,7 +78,7 @@
             </div>
             <div id="weekly-schedule-editor" class="space-y-4"></div>
             <div class="mt-8 text-center">
-                <button id="save-programmed-schedule" class="save-button">Editar</button>
+                <button id="save-programmed-schedule" class="save-button">Salvar</button>
             </div>
         </div>
         <div id="edit-specific" class="content-section hidden-section">
@@ -107,7 +107,7 @@
                     <button id="add-specific-day-slot" type="button" class="action-button add-button ml-2" title="Adicionar horário">+</button>
                 </div>
                 <div class="mt-4 text-center">
-                    <button id="save-specific-day-schedule" class="save-button">Editar Horários do Dia</button>
+                    <button id="save-specific-day-schedule" class="save-button">Salvar Horários do Dia</button>
                 </div>
             </div>
             <p id="specific-day-placeholder" class="text-center text-gray-500 italic">Selecione um dia no calendário para editar os horários.</p>
@@ -116,6 +116,6 @@
     <script src="auth.js"></script>
     <script src="api-config.js"></script>
     <script src="api-communication.js"></script>
-    <script src="template-servidor.js"></script>
+    <script src="template-profissional.js"></script>
 </body>
 </html>
