--- a/src/visualizar-perfil.html
+++ b/src/visualizar-perfil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>EasyBook</title>
     <link rel="stylesheet" href="visualizar-perfil.css">
 </head>
 <body>
@@ -25,8 +25,8 @@
         <div class="profile">
             <img id="profile-img-queried-user" src="http://localhost:8080/usuarios/2/fotoPerfil" alt="Profile Picture">
             <div class="profile-info">
-                <h2 id="nome-usuario-perfil">Diogo Almeida</h2>
-                <p id="bio-usuario-perfil">"Nossa barbearia é o espaço ideal para quem busca estilo, cuidado e uma experiência única."</p>
+                <h2 id="nome-usuario-perfil"></h2>
+                <p id="bio-usuario-perfil"></p>
             </div>
         </div>
         <div class="content">
