--- a/src/template-home.html
+++ b/src/template-home.html
@@ -13,7 +13,6 @@
             <div class="profile-link" id="profile-link">
                 <a href="atualizar-perfil.html">perfil</a>
                 <img id="profile-img" src="" alt="Profile Picture">
-                <!-- Drop-down menu -->
                 <div id="profile-dropdown">
                     <button class="dropdown-btn">perfil comum</button>
                     <button class="dropdown-btn">perfil profissional</button>
@@ -47,8 +46,6 @@
     <script src="api-config.js"></script>
     <script src="api-communication.js"></script>
     <script src="template-home.js"></script>
-    <script>
-        
-    </script>
+    <script src="menu-dropdown.js"></script>
 </body>
 </html>
