--- a/src/visualizar-perfil.html
+++ b/src/visualizar-perfil.html
@@ -47,5 +47,6 @@
     <script src="api-config.js"></script>
     <script src="api-communication.js"></script>
     <script src="visualizar-perfil.js"></script>
+    <script src="menu-dropdown.js"></script>
 </body>
 </html>
