--- a/src/template-profissional.html
+++ b/src/template-profissional.html
@@ -117,5 +117,6 @@
     <script src="api-config.js"></script>
     <script src="api-communication.js"></script>
     <script src="template-profissional.js"></script>
+    <script src="menu-dropdown.js"></script>
 </body>
 </html>
