--- a/src/atualizar-perfil.html
+++ b/src/atualizar-perfil.html
@@ -29,7 +29,7 @@
         <div id="message"></div>
     </div>
     <footer>
-        <a href="template-profissional.html">Cancelar</a></p>
+        <a href="home-profissional.html">Cancelar</a></p>
     </footer>
     <script src="auth.js"></script>
     <script src="atualizar-perfil.js"></script>
