correção de bugs

--- a/src/atualizar-perfil.html
+++ b/src/atualizar-perfil.html
@@ -23,6 +23,10 @@
             <div class="form-group">
                 <label for="username">Nome de Usuário:</label>
                 <input type="text" id="username" name="username" required>
+                <br>
+<!--                <label for="bio">Biografia:</label>
+                <textarea id="bio" name="bio" rows="10"></textarea>
+-->
             </div>
             <button type="submit">Confirmar</button>
         </form>
@@ -31,6 +35,8 @@
     <footer>
         <a href="home-profissional.html">Cancelar</a></p>
     </footer>
+    <script src="api-config.js"></script>
+    <script src="api-communication.js"></script>
     <script src="auth.js"></script>
     <script src="atualizar-perfil.js"></script>
 </body>
