--- a/src/home-profissional.html
+++ b/src/home-profissional.html
@@ -36,10 +36,10 @@
         <div id="view-agenda" class="content-section">
             <header class="flex flex-col md:flex-row items-center justify-between pb-4 border-b border-gray-200 mb-4">
                 <div class="flex items-center mb-4 md:mb-0">
-                    <img src="https://placehold.co/64x64/E2E8F0/4A5568?text=Logo" alt="Logo do Prestador" class="w-16 h-16 rounded-full mr-4">
+                    <img id="profile-img-big" src="" alt="Logo do Prestador" class="w-16 h-16 rounded-full mr-4">
                     <div class="flex items-center">
-                        <h1 class="text-xl md:text-2xl font-semibold text-gray-800 mr-2">Nome do Prestador</h1>
-                        <button aria-label="Editar perfil" class="text-gray-500 hover:text-purple-600 icon-center ml-1 p-1">
+                        <h1 id="profile-name" class="text-xl md:text-2xl font-semibold text-gray-800 mr-2">Nome do Prestador</h1>
+                        <button id="edit-profile-card" aria-label="Editar perfil" class="text-gray-500 hover:text-purple-600 icon-center ml-1 p-1">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 3a2.85 2.83 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5Z"/><path d="m15 5 4 4"/></svg>
                         </button>
                     </div>
@@ -48,9 +48,9 @@
                     
                 </div>
             </header>
-            <section id="bio" class="text-white p-4 rounded-lg mb-6 text-center md:text-left">
+            <!--<section id="bio" class="text-white p-4 rounded-lg mb-6 text-center md:text-left">
                 <p>Este é um espaço para a descrição do perfil do prestador de serviço. Pode incluir informações sobre a especialidade, experiência, ou qualquer outra informação relevante para os clientes.</p>
-            </section>
+            </section>-->
             <section class="mb-6">
                 <h2 id="current-month-year" class="text-xl font-semibold text-center text-gray-800 mb-4">Maio 2025</h2>
                 <div class="flex items-center justify-center gap-x-4 md:gap-x-6">
