--- a/src/visualizar-perfil.html
+++ b/src/visualizar-perfil.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="profile">
-            <img id="profile-img-queried-user" src="http://localhost:8080/usuarios/2/fotoPerfil" alt="Profile Picture">
+            <img id="profile-img-queried-user" src="" alt="Profile Picture">
             <div class="profile-info">
                 <h2 id="nome-usuario-perfil"></h2>
                 <p id="bio-usuario-perfil"></p>
