dashboard do ponto de vista do cliente; alteração no dashboard do profissional para diferenciar horários livres de ocupados; funções de cancelamento, tanto para profissionais quanto para clientes.

--- a/src/template-home.html
+++ b/src/template-home.html
@@ -21,24 +21,12 @@
                 </div>
             </div>
         </div>
-        <div class="profile">
-            <img src="http://localhost:8080/usuarios/2/fotoPerfil" alt="Profile Picture">
-            <div class="profile-info">
-                <h2>Diogo Almeida</h2>
-                <p>"Nossa barbearia é o espaço ideal para quem busca estilo, cuidado e uma experiência única."</p>
-            </div>
-        </div>
         <div class="content">
-            <h3 id="current-month"></h3>
-            <div class="calendar">
-                <div class="calendar-navigation">
-                    <button id="prev-week">&lt;</button>
-                    <div class="calendar-dates" id="calendar-dates"></div>
-                    <button id="next-week">&gt;</button>
-                </div>
-            </div>
-            <h3>Horários disponíveis:</h3>
-            <div class="times" id="available-times"></div>
+            <h3>Horários agendados</h3>
+
+        <div class="appointments" id="appointments">
+                    
+        </div>
         </div>
         <div class="footer"></div>
     </div>
