--- a/src/home-profissional.html
+++ b/src/home-profissional.html
@@ -61,9 +61,15 @@
             </section>
             <section class="border-t border-gray-200 pt-6">
                 <h3 class="text-lg font-semibold text-center text-gray-700 mb-4">Horários disponibilizados:</h3>
-                <div id="appointments-container" class="flex flex-wrap justify-center gap-3">
-                    <p id="no-appointments-msg" class="text-gray-500 italic">Selecione um dia para ver os horários disponibilizados.</p>
+                <div id="horarios-disponiveis-container" class="flex flex-wrap justify-center gap-3">
                 </div>
+                    <p id="horario-livre-msg" class="horario-msg" class="text-gray-500 italic">Selecione um dia para ver os horários disponibilizados.</p>
+                <br>
+                <h3 class="text-lg font-semibold text-center text-gray-700 mb-4">Horários agendados:</h3>
+                <div id="horarios-agendados-container" class="flex flex-wrap justify-center gap-3">
+                    
+                </div>
+                <p id="horario-agendado-msg" class="horario-msg" class="text-gray-500 italic">Selecione um dia para ver os horários agendados.</p>
             </section>
         </div>
         <!--
