--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,8 @@
       <p id="login-error" style="color: var(--danger, red); display: none; margin-top: 10px;">Usuário ou senha inválidos.</p>
     </div>
   </div>
-  <!-- Transição de Tela e Login -->
+  <script src="api-config.js"></script>
+  <script src="api-communication.js"></script>
   <script src="auth.js"></script>
   <script src="index.js"></script>    
 </body>
